src/test/ui/closures/2229_closure_analysis/migrations/insignificant_drop.stderr
error: Drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/insignificant_drop.rs:13:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |         let _t1 = t1.0;
LL | |         let _t2 = t2.0;
LL | |     };
   | |_____^
   |
note: the lint level is defined here
  --> $DIR/insignificant_drop.rs:1:9
   |
LL | #![deny(disjoint_capture_drop_reorder)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: let (t, t1, t2) = (t, t1, t2);

error: Drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/insignificant_drop.rs:31:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |         let _t1 = t1.0;
LL | |         let _t2 = t2;
LL | |     };
   | |_____^
   |
   = note: let (t, t1) = (t, t1);

error: Drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/insignificant_drop.rs:47:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |         println!("{}", t1.1);
LL | |     };
   | |_____^
   |
   = note: let (t) = (t);

error: Drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/insignificant_drop.rs:65:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |         let _t1 = t1.0;
LL | |     };
   | |_____^
   |
   = note: let (t) = (t);

error: Drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/insignificant_drop.rs:83:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |         let _s = s.0;
LL | |     };
   | |_____^
   |
   = note: let (t) = (t);

error: Drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/insignificant_drop.rs:98:13
   |
LL |       let c = move || {
   |  _____________^
LL | |
LL | |
LL | |         println!("{} {}", t1.1, t.1);
LL | |     };
   | |_____^
   |
   = note: let (t1, t) = (t1, t);

error: Drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/insignificant_drop.rs:113:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |     };
   | |_____^
   |
   = note: let (t) = (t);

error: aborting due to 7 previous errors

